--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,13 @@
     ],
     "require": {
         "php": "^8.1",
-        "silverstripe/framework": "^5"
+        "silverstripe/framework": "^5",
+        "silverstripe/silverstripe-search-service": "dev-feature/silverstripe-5",
+        "elastic/enterprise-search": "^8.6",
+        "guzzlehttp/guzzle": "^7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
+        "silverstripe/recipe-testing": "^3",
         "tractorcow/silverstripe-fluent": "^7",
         "slevomat/coding-standard": "~8.8.0"
     },
