--- a/tests/Service/EnterpriseSearchServiceTest.yml
+++ b/tests/Service/EnterpriseSearchServiceTest.yml
@@ -1,4 +1,4 @@
-SilverStripe\SearchServiceElastic\Tests\Fake\TagFake:
+SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake:
   one:
     Title: Tag one
   two:
@@ -6,13 +6,13 @@ SilverStripe\SearchServiceElastic\Tests\Fake\TagFake:
   three:
     Title: Tag three
 
-SilverStripe\SearchServiceElastic\Tests\Fake\ImageFake:
+SilverStripe\ForagerElasticEnterprise\Tests\Fake\ImageFake:
   one:
     URL: '/image-one/'
-    Tags: =>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.two,=>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.three
+    Tags: =>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.two,=>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.three
   two:
     URL: '/image-two/'
-    Tags: =>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.one,=>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.two
+    Tags: =>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.one,=>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.two
 
 SilverStripe\Security\Member:
   one:
@@ -25,33 +25,33 @@ SilverStripe\Security\Member:
     FirstName: member-three-first
     Surname: member-three-last
 
-SilverStripe\SearchServiceElastic\Tests\Fake\DataObjectFake:
+SilverStripe\ForagerElasticEnterprise\Tests\Fake\DataObjectFake:
   one:
     Title: Dataobject one
-    Tags: =>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.one,=>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.two
+    Tags: =>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.one,=>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.two
     Member: =>SilverStripe\Security\Member.one
-    Images: =>SilverStripe\SearchServiceElastic\Tests\Fake\ImageFake.one
+    Images: =>SilverStripe\ForagerElasticEnterprise\Tests\Fake\ImageFake.one
     Sort: 1
     ShowInSearch: 1
   two:
     Title: Dataobject two
-    Tags: =>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.two,=>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.three
+    Tags: =>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.two,=>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.three
     Member: =>SilverStripe\Security\Member.two
-    Images: =>SilverStripe\SearchServiceElastic\Tests\Fake\ImageFake.two
+    Images: =>SilverStripe\ForagerElasticEnterprise\Tests\Fake\ImageFake.two
     Sort: 2
     ShowInSearch: 0
   three:
     Title: Dataobject three
-    Tags: =>SilverStripe\SearchServiceElastic\Tests\Fake\TagFake.one
+    Tags: =>SilverStripe\ForagerElasticEnterprise\Tests\Fake\TagFake.one
     Member: =>SilverStripe\Security\Member.three
     Sort: 3
     ShowInSearch: 1
 
-SilverStripe\SearchServiceElastic\Tests\Fake\DataObjectFakePrivate:
+SilverStripe\ForagerElasticEnterprise\Tests\Fake\DataObjectFakePrivate:
   one:
     Title: Dataobject one
 
-SilverStripe\SearchServiceElastic\Tests\Fake\DataObjectFakeVersioned:
+SilverStripe\ForagerElasticEnterprise\Tests\Fake\DataObjectFakeVersioned:
   one:
     Title: Dataobject one Versioned
     ShowInSearch: 1
