--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-node_modules
-/vendor/
+#OS
 .DS_Store
+
+# IDE
+.vscode
 .idea
+
+# PHP
+composer.lock
+vendor
+.phpunit.result.cache
+
+#silverstripe
+.env
+public
