--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,5 +1,5 @@
 ---
-Name: silverstripe-search-service-elastic
+Name: silverstripe-forager-elastic-enterprise
 Only:
   envvarset: 'ENTERPRISE_SEARCH_API_KEY'
 After:
@@ -7,24 +7,24 @@ After:
   - 'search-service-default'
 ---
 SilverStripe\Core\Injector\Injector:
-  SilverStripe\SearchService\Service\IndexConfiguration:
+  SilverStripe\Forager\Service\IndexConfiguration:
     constructor:
       index_variant: '`ENTERPRISE_SEARCH_ENGINE_PREFIX`'
-  SilverStripe\SearchService\Interfaces\IndexingInterface:
-    class: SilverStripe\SearchServiceElastic\Service\EnterpriseSearchService
+  SilverStripe\Forager\Interfaces\IndexingInterface:
+    class: SilverStripe\ForagerElasticEnterprise\Service\EnterpriseSearchService
     constructor:
       client: '%$Elastic\EnterpriseSearch\Client'
-      configuration: '%$SilverStripe\SearchService\Service\IndexConfiguration'
-      builder: '%$SilverStripe\SearchService\Service\DocumentBuilder'
+      configuration: '%$SilverStripe\Forager\Service\IndexConfiguration'
+      builder: '%$SilverStripe\Forager\Service\DocumentBuilder'
   Elastic\EnterpriseSearch\Client:
-    factory: SilverStripe\SearchServiceElastic\Service\ClientFactory
+    factory: SilverStripe\ForagerElasticEnterprise\Service\ClientFactory
     constructor:
       host: '`ENTERPRISE_SEARCH_ENDPOINT`'
       token: '`ENTERPRISE_SEARCH_API_KEY`'
       http_client: '%$GuzzleHttp\Client'
 
 ## customise the dataobject fields for EnterpriseSearch compatability
-SilverStripe\SearchService\DataObject\DataObjectDocument:
+SilverStripe\Forager\DataObject\DataObjectDocument:
   id_field: record_id
   base_class_field: record_base_class
   page_content_field: page_content
