--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "silverstripe/silverstripe-search-service-elastic",
-    "description": "Provide Elastic Enterprise Search Functionality to Silverstripe Search Service",
+    "name": "silverstripe/silverstripe-forager-elastic-enterprise",
+    "description": "Elastic Enterprise Search Provider for Silverstripe Forager",
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "authors": [
@@ -16,7 +16,7 @@
     "require": {
         "php": "^8.1",
         "silverstripe/framework": "^5",
-        "silverstripe/silverstripe-search-service": "^3",
+        "silverstripe/silverstripe-forager": "^1",
         "elastic/enterprise-search": "^8.6",
         "guzzlehttp/guzzle": "^7"
     },
@@ -27,8 +27,8 @@
     },
     "autoload": {
         "psr-4": {
-            "SilverStripe\\SearchServiceElastic\\": "src/",
-            "SilverStripe\\SearchServiceElastic\\Tests\\": "tests/"
+            "SilverStripe\\ForagerElasticEnterprise\\": "src/",
+            "SilverStripe\\ForagerElasticEnterprise\\Tests\\": "tests/"
         }
     },
     "minimum-stability": "dev",
