--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "silverstripe-search-service-elastic",
-  "description": "Elastic App Search implementation of search indexing and configuration requirements",
+  "name": "silverstripe-forager-elastic-enterprise",
+  "description": "Elastic Enterprise Search Provider for Silverstripe Forager",
   "main": "README.md",
-  "repository": "https://github.com/silverstripe/silverstripe-search-service-elastic",
+  "repository": "https://github.com/silverstripeltd/silverstripe-forager-elastic-enterprise",
   "author": "Silverstripe Ltd"
 }
