--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -116,7 +116,7 @@
     <rule ref="SlevomatCodingStandard.Files.TypeNameMatchesFileName">
         <properties>
             <!-- Set the root namespace for our src dir and phpunit dir. Please change these as required -->
-            <property name="rootNamespaces" type="array" value="src=>SilverStripe\SearchServiceElastic,tests=>SilverStripe\SearchServiceElastic\Tests"/>
+            <property name="rootNamespaces" type="array" value="src=>SilverStripe\ForagerElasticEnterprise,tests=>SilverStripe\ForagerElasticEnterprise\Tests"/>
             <property name="ignoredNamespaces" type="array" value="Slevomat\Services"/>
         </properties>
     </rule>
