--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": "^8.1",
         "silverstripe/framework": "^5",
-        "silverstripe/silverstripe-forager": "^1",
+        "silverstripe/silverstripe-forager": "^1.x-dev",
         "elastic/enterprise-search": "^8.6",
         "guzzlehttp/guzzle": "^7"
     },
@@ -24,6 +24,12 @@
         "silverstripe/recipe-testing": "^3",
         "tractorcow/silverstripe-fluent": "^7",
         "slevomat/coding-standard": "~8.8.0"
+    },
+    "repositories": {
+        "silverstripe/silverstripe-forager": {
+            "type": "git",
+            "url": "https://github.com/silverstripeltd/silverstripe-forager.git"
+        }
     },
     "autoload": {
         "psr-4": {
@@ -37,7 +43,9 @@
         "allow-plugins": {
             "composer/installers": true,
             "silverstripe/vendor-plugin": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "php-http/discovery": true,
+            "silverstripe/recipe-plugin": true
         }
     }
 }
