--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silverstripe-forager-elastic-enterprise",
-  "description": "Elastic Enterprise Search Provider for Silverstripe Forager",
+  "description": "Elastic Enterprise Search Provider for Silverstripe CMS",
   "main": "README.md",
   "repository": "https://github.com/silverstripeltd/silverstripe-forager-elastic-enterprise",
   "author": "Silverstripe Ltd"
