Change namespace to Forager (#1)
* change namespace

* Update readme

* Add private repo changes

* add missing table_name

* Description to use CMS

Co-authored-by: Chris Penny <chris.penny@gmail.com>

---------

Co-authored-by: Chris Penny <chris.penny@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "silverstripe/silverstripe-search-service-elastic",
-    "description": "Provide Elastic Enterprise Search Functionality to Silverstripe Search Service",
+    "name": "silverstripe/silverstripe-forager-elastic-enterprise",
+    "description": "Elastic Enterprise Search Provider for Silverstripe Forager",
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "authors": [
@@ -16,7 +16,7 @@
     "require": {
         "php": "^8.1",
         "silverstripe/framework": "^5",
-        "silverstripe/silverstripe-search-service": "^3",
+        "silverstripe/silverstripe-forager": "^1.x-dev",
         "elastic/enterprise-search": "^8.6",
         "guzzlehttp/guzzle": "^7"
     },
@@ -25,10 +25,16 @@
         "tractorcow/silverstripe-fluent": "^7",
         "slevomat/coding-standard": "~8.8.0"
     },
+    "repositories": {
+        "silverstripe/silverstripe-forager": {
+            "type": "git",
+            "url": "https://github.com/silverstripeltd/silverstripe-forager.git"
+        }
+    },
     "autoload": {
         "psr-4": {
-            "SilverStripe\\SearchServiceElastic\\": "src/",
-            "SilverStripe\\SearchServiceElastic\\Tests\\": "tests/"
+            "SilverStripe\\ForagerElasticEnterprise\\": "src/",
+            "SilverStripe\\ForagerElasticEnterprise\\Tests\\": "tests/"
         }
     },
     "minimum-stability": "dev",
@@ -37,7 +43,9 @@
         "allow-plugins": {
             "composer/installers": true,
             "silverstripe/vendor-plugin": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "php-http/discovery": true,
+            "silverstripe/recipe-plugin": true
         }
     }
 }
