--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": "^8.1",
         "silverstripe/framework": "^5.1",
-        "silverstripe/silverstripe-forager": "dev-main",
+        "silverstripe/silverstripe-forager": "^1",
         "elastic/enterprise-search": "^8.6",
         "guzzlehttp/guzzle": "^7"
     },
