Add suffix to ES Client configuration

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -3,8 +3,7 @@ Name: silverstripe-forager-elastic-enterprise
 Only:
   envvarset: 'ENTERPRISE_SEARCH_API_KEY'
 After:
-  - 'silverstripe-search-service-dataobject'
-  - 'search-service-default'
+  - 'search-forager-default'
 ---
 SilverStripe\Core\Injector\Injector:
   SilverStripe\Forager\Service\IndexConfiguration:
@@ -13,10 +12,10 @@ SilverStripe\Core\Injector\Injector:
   SilverStripe\Forager\Interfaces\IndexingInterface:
     class: SilverStripe\ForagerElasticEnterprise\Service\EnterpriseSearchService
     constructor:
-      client: '%$Elastic\EnterpriseSearch\Client'
+      client: '%$Elastic\EnterpriseSearch\Client.managementClient'
       configuration: '%$SilverStripe\Forager\Service\IndexConfiguration'
       builder: '%$SilverStripe\Forager\Service\DocumentBuilder'
-  Elastic\EnterpriseSearch\Client:
+  Elastic\EnterpriseSearch\Client.managementClient:
     factory: SilverStripe\ForagerElasticEnterprise\Service\ClientFactory
     constructor:
       host: '`ENTERPRISE_SEARCH_ENDPOINT`'
